// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UsersForm /> renders create user 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Platform Details"
      />
      <InputField
        componentType="input"
        disabled={false}
        id="frm-users-first-name"
        inputType="text"
        label="First Name"
        name="firstName"
      />
      <InputField
        componentType="input"
        disabled={false}
        id="frm-users-last-name"
        inputType="text"
        label="Last Name"
        name="lastName"
      />
      <InputField
        componentType="input"
        disabled={false}
        id="frm-users-external-id"
        inputType="text"
        label="External ID"
        name="externalId"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        componentType="input"
        disabled={false}
        id="frm-users-work-station-id"
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        disabled={true}
        id="frm-users-role-id"
        label="Tenant Role"
        name="roleId"
        options={Array []}
        required={false}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-email"
        inputType="text"
        label="Email"
        name="email"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-platform-status"
        inputType="text"
        label="Platform Status"
        name="invitationStatus"
      />
      <SelectField
        disabled={true}
        id="frm-users-no-password-id"
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Enabled",
              "value": false,
            },
            Object {
              "label": "Disabled",
              "value": true,
            },
          ]
        }
        required={true}
      />
      <SelectField
        disabled={false}
        id="frm-users-default-identity-provider-id"
        label="Single Sign On Identitiy Provider"
        name="defaultIdentityProvider"
        required={true}
      />
      <Connect(ConfirmationWrapper)
        confirmBtnCallback={[Function]}
        mainText="Are you sure you want to send a password reset email to undefined?"
      >
        <Styled(Button)
          buttonType="secondary"
          className="reset-password-button"
          type="button"
        >
          Reset Password
        </Styled(Button)>
      </Connect(ConfirmationWrapper)>
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        onActionButtonClick={[Function]}
        text="Extensions"
        userHasUpdatePermission={true}
      />
      <ExtensionListField
        className="users-extensions"
        disabled={false}
        label="Inputs"
        name="extensions"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Capacity"
      />
      <SelectField
        disabled={false}
        id="frm-users-capacity-rule"
        label="Capacity Rule"
        name="effectiveCapacityRule"
        required={true}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;

exports[`<UsersForm /> renders update user 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Platform Details"
      />
      <InputField
        componentType="input"
        disabled={false}
        id="frm-users-first-name"
        inputType="text"
        label="First Name"
        name="firstName"
      />
      <InputField
        componentType="input"
        disabled={false}
        id="frm-users-last-name"
        inputType="text"
        label="Last Name"
        name="lastName"
      />
      <InputField
        componentType="input"
        disabled={false}
        id="frm-users-external-id"
        inputType="text"
        label="External ID"
        name="externalId"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        componentType="input"
        disabled={false}
        id="frm-users-work-station-id"
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        disabled={true}
        id="frm-users-role-id"
        label="Tenant Role"
        name="roleId"
        options={Array []}
        required={false}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-email"
        inputType="text"
        label="Email"
        name="email"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-platform-status"
        inputType="text"
        label="Platform Status"
        name="invitationStatus"
      />
      <SelectField
        disabled={true}
        id="frm-users-no-password-id"
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Enabled",
              "value": false,
            },
            Object {
              "label": "Disabled",
              "value": true,
            },
          ]
        }
        required={true}
      />
      <SelectField
        disabled={false}
        id="frm-users-default-identity-provider-id"
        label="Single Sign On Identitiy Provider"
        name="defaultIdentityProvider"
        required={true}
      />
      <Connect(ConfirmationWrapper)
        confirmBtnCallback={[Function]}
        mainText="Are you sure you want to send a password reset email to undefined?"
      >
        <Styled(Button)
          buttonType="secondary"
          className="reset-password-button"
          type="button"
        >
          Reset Password
        </Styled(Button)>
      </Connect(ConfirmationWrapper)>
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        onActionButtonClick={[Function]}
        text="Extensions"
        userHasUpdatePermission={true}
      />
      <ExtensionListField
        className="users-extensions"
        disabled={false}
        label="Inputs"
        name="extensions"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Capacity"
      />
      <SelectField
        disabled={false}
        id="frm-users-capacity-rule"
        label="Capacity Rule"
        name="effectiveCapacityRule"
        required={true}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;

exports[`<UsersForm /> renders update user saving and inherited 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Platform Details"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-first-name"
        inputType="text"
        label="First Name"
        name="firstName"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-last-name"
        inputType="text"
        label="Last Name"
        name="lastName"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-external-id"
        inputType="text"
        label="External ID"
        name="externalId"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-work-station-id"
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        disabled={true}
        id="frm-users-role-id"
        label="Tenant Role"
        name="roleId"
        options={Array []}
        required={false}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-email"
        inputType="text"
        label="Email"
        name="email"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-platform-status"
        inputType="text"
        label="Platform Status"
        name="invitationStatus"
      />
      <SelectField
        disabled={true}
        id="frm-users-no-password-id"
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Enabled",
              "value": false,
            },
            Object {
              "label": "Disabled",
              "value": true,
            },
          ]
        }
        required={true}
      />
      <SelectField
        disabled={true}
        id="frm-users-default-identity-provider-id"
        label="Single Sign On Identitiy Provider"
        name="defaultIdentityProvider"
        required={true}
      />
      <Connect(ConfirmationWrapper)
        confirmBtnCallback={[Function]}
        mainText="Are you sure you want to send a password reset email to undefined?"
      >
        <Styled(Button)
          buttonType="secondary"
          className="reset-password-button"
          type="button"
        >
          Reset Password
        </Styled(Button)>
      </Connect(ConfirmationWrapper)>
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        onActionButtonClick={[Function]}
        text="Extensions"
        userHasUpdatePermission={true}
      />
      <ExtensionListField
        className="users-extensions"
        disabled={false}
        label="Inputs"
        name="extensions"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Capacity"
      />
      <SelectField
        disabled={true}
        id="frm-users-capacity-rule"
        label="Capacity Rule"
        name="effectiveCapacityRule"
        required={true}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;

exports[`<UsersForm /> renders update user without update permision 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Platform Details"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-first-name"
        inputType="text"
        label="First Name"
        name="firstName"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-last-name"
        inputType="text"
        label="Last Name"
        name="lastName"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-external-id"
        inputType="text"
        label="External ID"
        name="externalId"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-work-station-id"
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        disabled={true}
        id="frm-users-role-id"
        label="Tenant Role"
        name="roleId"
        options={Array []}
        required={false}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-email"
        inputType="text"
        label="Email"
        name="email"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-platform-status"
        inputType="text"
        label="Platform Status"
        name="invitationStatus"
      />
      <SelectField
        disabled={true}
        id="frm-users-no-password-id"
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Enabled",
              "value": false,
            },
            Object {
              "label": "Disabled",
              "value": true,
            },
          ]
        }
        required={true}
      />
      <SelectField
        disabled={true}
        id="frm-users-default-identity-provider-id"
        label="Single Sign On Identitiy Provider"
        name="defaultIdentityProvider"
        required={true}
      />
      <Connect(ConfirmationWrapper)
        confirmBtnCallback={[Function]}
        mainText="Are you sure you want to send a password reset email to undefined?"
      >
        <Styled(Button)
          buttonType="secondary"
          className="reset-password-button"
          type="button"
        >
          Reset Password
        </Styled(Button)>
      </Connect(ConfirmationWrapper)>
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        onActionButtonClick={[Function]}
        text="Extensions"
        userHasUpdatePermission={false}
      />
      <ExtensionListField
        className="users-extensions"
        disabled={false}
        label="Inputs"
        name="extensions"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Capacity"
      />
      <SelectField
        disabled={true}
        id="frm-users-capacity-rule"
        label="Capacity Rule"
        name="effectiveCapacityRule"
        required={true}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;
